crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__12_page_up.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: PageUp,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
