crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__13_page_down.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: PageDown,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
