crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__16_f1.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: F(
                1,
            ),
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
