crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__17_media_playpause.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: MediaPlayPause,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
