crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__18_media_stop.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: MediaStop,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
