crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__19_media_track_next.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: MediaTrackNext,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
