crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__tests__3_backtab.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: Tab,
            modifiers: KeyModifiers {
                shift: true,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
